package spacing issue on mobile

--- a/src/sass/flexible-content-blocks/_packages.scss
+++ b/src/sass/flexible-content-blocks/_packages.scss
@@ -25,6 +25,7 @@
         @include max-screen(767px) { 
             grid-template-columns: 1fr;
             gap: 1rem;
+            padding: 0 .3rem;
         }
     }
 
@@ -37,12 +38,14 @@
         justify-content: start;
         align-items: center;
         background-color: $white;
+        margin: 1rem;
 
         @media (max-width: 767px) {
            padding-top: 1rem;
            padding-bottom: 1rem;
            display: flex !important;
            height: auto !important;
+           width: calc(100% - 2rem) !important;
         }
 
         // &-eyebrow {
